Sutter Health/src/objects/Correspondence__c.object
<CustomObject>
    <description>Correspondence</description>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Street__c + &quot;, &quot; + City__c + &quot;, &quot; + State__c + &quot;, &quot; + ZipCode__c + &quot;, &quot; + Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_same_as_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address same as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Correspondences</relationshipLabel>
        <relationshipName>Correspondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correspondence_Type__c</fullName>
        <label>Correspondence Definition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Member_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Age 26 Dependent Termination Letter</fullName>
                </value>
                <value>
                    <fullName>Certificate of Creditable Coverage</fullName>
                </value>
                <value>
                    <fullName>Coordination of Benefits Form</fullName>
                </value>
                <value>
                    <fullName>Disabled Dependent Certification Form</fullName>
                </value>
                <value>
                    <fullName>Enrollment Forms</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Acupuncture and Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - All</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Dental</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Infertility</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Medical</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Orthotics and Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Evidence of Coverage - Vision</fullName>
                </value>
                <value>
                    <fullName>Explanation of Benefits - Out of Area Only</fullName>
                </value>
                <value>
                    <fullName>Group Subscriber Termination Letter</fullName>
                </value>
                <value>
                    <fullName>ID Cards – All Members</fullName>
                </value>
                <value>
                    <fullName>Member ID Card</fullName>
                </value>
                <value>
                    <fullName>Member Renewal Letter with ID Cards</fullName>
                </value>
                <value>
                    <fullName>New Member Welcome Letter with ID Cards</fullName>
                </value>
                <value>
                    <fullName>Premium Bill</fullName>
                </value>
                <value>
                    <fullName>Provider Directory</fullName>
                </value>
                <value>
                    <fullName>Other - Please Specify in Comments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Mailed__c</fullName>
        <label>Date Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_To_Vendor__c</fullName>
        <label>Date Sent to Print Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Taken_To_Close__c</fullName>
        <label>Days Taken to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Provider_Id__c</fullName>
        <label>Member/Provider Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Correspondence Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overnight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overnight checkbox</description>
        <label>Overnight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_To_Sub__c</fullName>
        <label>Relationship to Subscriber</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Doctor&apos;s Office Representative</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Practitioner</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_To__c</fullName>
        <label>Send To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Correspondences</relationshipLabel>
        <relationshipName>Correspondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Id_f__c</fullName>
        <description>Created to get member id of Subject for Reporting purpose</description>
        <formula>Subject_Name__r.Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subject Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Correspondences (Test Contact)</relationshipLabel>
        <relationshipName>Correspondences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_ID__c</fullName>
        <formula>Service_Request__r.Contact.Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Id_Prefix__c</fullName>
        <formula>LEFT(Service_Request__r.Contact.Member_ID__c,7)</formula>
        <label>Subscriber Id Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggered_in_Health_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggered in Health Rules</description>
        <label>Triggered in Health Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_of_Correspondence__c</fullName>
        <label>Vehicle of Correspondence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Correspondence</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Correspondence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>